# rock_github

./: README.md
Learn/C/mmap/: map_test1  map_test1.c  map_test2  map_test2.c
Learn/python/ab量化交易/: learn 1.py  learn 10.py  learn 11.py  learn 12.py  learn 13_bnl.py  learn 14_pd.py  learn 15_tsd.py  learn 2.py  learn 3.py  learn 4.py  learn 5.py  learn 6.py  learn 7.py  learn 8.py  learn 9.py
app/: README.md
app/App_test/app/: build.gradle
app/FactoryTest/: ReadMe.txt  local.properties
app/FactoryTest/app/: build.gradle
app/android_things/: build.gradle
app/android_things/app/: build.gradle
app/as731_app/rest/server/: Android.mk  CMakeLists.txt  Makefile  release.sh  rest_server.mk
app/as731_app/rest/server/avs_auth/: avs_auth.h
app/as731_app/rest/server/network/: network.c  network.h
app/as731_app/rest/server/server/: server.c
app/as731_app/rest/server/ssdp/: ssdp.c
app/as731_app/sample/: local.properties  rest_sample.apk
app/qiege/: build.gradle  gradle.properties
app/qiege/app/: build.gradle
code_test/: README.md
code_test/java/: Runable_test.java  Thread_test.java
code_test/learn/: invSqrt  invSqrt.c  peiqi  peiqi.c  temp  temp.c  timing  timing.c  usb_mtp.sh
code_test/learn/data/: pointer  pointer.c  test  test.c
code_test/learn/filter/: filter_w  filter_w.c  recursive_ave  recursive_ave.c
code_test/learn/mag/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hmc5883l_driver_core.cpp  mag0_driver_core.cpp  mag0_hmc5883l_driver.cpp  snav_drivers.h  snav_drivers_io.c  snav_drivers_io.h
code_test/learn/sensor_drivers/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code_test/learn/sensor_drivers/device_drivers/mag/: hmc5883_driver_core.cpp  mag0_driver_core.cpp  mag0_hmc5883_driver.cpp  snav_drivers.h  snav_drivers_io.c
code_test/learn/sensor_drivers/device_drivers/mag5883/: hmc5883_driver_core.cpp  mag0_hmc5883_driver.cpp  snav_drivers_io.h
code_test/linux_notifier/: 0-chain0.c  0-chain0.ko  1-chain1.c  1-chain1.ko  2-chain2.c  2-chain2.ko  Makefile  read.md
code_test/memtester-4.3.0/: read.txt
code_test/mm-systeminfo/: mm-systeminfo.bb
code_test/mm-wifireset/files/: Makefile.am  wifireset.conf
code_test/mm-wifireset/files/wlan_recovery/: netlink_tester.c  patch
code_test/mongoose/: CMakeLists.txt  Makefile
code_test/mongoose/avs_auth/: avs_auth.c
code_test/mongoose/mong_test/: CMakeLists.txt  mong_test.c
code_test/mongoose/network/: network.c
code_test/mongoose/nmtool/: nmcli.h  nmset.c  nmtool.c  nmtool.h
code_test/mongoose/server/: client.c  server.c
code_test/mongoose/ssdp/: ssdp.c  ssdp.h
code_test/mqtt/: paho.mqtt.c.tar.bz2
code_test/multi/: clinet  multi_udp_clinet.c  multi_udp_server.c  read.md  server
code_test/sha256/: a.out  makefile  sha256-00.c
code_test/tinyalsa/: build.sh  tinycap  tinyhostless  tinymix  tinypcminfo  tinyplay
code_test/tinyalsa/src/test/: CMakeLists.txt  build.md  tinycap  tinyhostless  tinymix  tinypcminfo  tinyplay
code_test/uart_test/: uart_test
code_test/work/tinyalsa/: CMakeLists.txt  mixer.c  pcm.c  tinycap.c
driver/: read.MD
driver/GPIO_driver/: Makefile  led_gpio.c  led_gpio.ko
driver/bq2560x_mtk/: bq2560x.c  bq2560x.h
driver/copy_to_from_user/: .copy_to_from_user.ko.cmd  .copy_to_from_user.mod.o.cmd  .copy_to_from_user.o.cmd  Makefile  Module.symvers  copy_to_from_user.c  copy_to_from_user.ko  copy_to_from_user.mod.c  main  main.c  modules.order
driver/irq_handler/: irq_handler.c
driver/kernel-mode-timer/: .kernel-mode-timer.ko.cmd  .kernel-mode-timer.mod.o.cmd  .kernel-mode-timer.o.cmd  Makefile  kernel-mode-timer.c  kernel-mode-timer.ko  kernel-mode-timer.mod.c  modules.order
driver/linux_sensor_driver/: mpu6050.c
driver/module_ko_test/: Makefile  bmp_280.c  bmp_280.ko  hello.c  i2c_test.c
driver/netlink/: .netl.ko.cmd  .netl.mod.o.cmd  .netl.o.cmd  Makefile  modules.order  netl.c  netl.ko  netl.mod.c  netlink_use  netlink_use.c
driver/projects_hmc5883l/: Makefile  h43_client.c  h43_driver.c  log.h  sensor_h43.c
driver/queue_work/: .queue_delayed_work.ko.cmd  .queue_delayed_work.mod.o.cmd  .queue_delayed_work.o.cmd  Makefile  modules.order  queue_delayed_work.c  queue_delayed_work.ko  queue_delayed_work.mod.c
driver/timer_handler/: .timer_handler.ko.cmd  .timer_handler.mod.o.cmd  .timer_handler.o.cmd  Makefile  modules.order  timer_handler.c  timer_handler.ko  timer_handler.mod.c
driver/workqueue_neihe/: .work_queue_kernek.ko.cmd  .work_queue_kernek.mod.o.cmd  .work_queue_kernek.o.cmd  Makefile  modules.order  work_queue_kernek.c  work_queue_kernek.mod.c
driver/workqueue_zidingyi/: .work_queue_zidiyi.ko.cmd  .work_queue_zidiyi.mod.o.cmd  .work_queue_zidiyi.o.cmd  Makefile  modules.order  work_queue_zidiyi.c  work_queue_zidiyi.ko  work_queue_zidiyi.mod.c
driver/图传/: 8020固件更新.rar  Artosyn USB receive_send module.rar  图传测试.rar  图传测试说明.docx
ibu/: 0001-mipi-RGB-icn6211-i2c8.patch  0002-gpio-sys.patch  0003-usb-r8152.patch  0004-TP.patch  read.txt
nod_test/: base.h  baseline.py  lineread.py  myout.txt  python_test.py  reboot_tag.sh  test  test.c  tt.txt
nod_test/avs_test/: avs_read_test  avs_read_test.c
nod_test/callback/: test.c
nod_test/co2_test/: co2_test  co2_test.c
nod_test/dbus/: dbus_test.c  read.md
nod_test/display_time/: display_time  display_time.c
nod_test/hsv2rgb/: hsv2rgb  hsv2rgb.c
nod_test/multi/: client  multi_udp_client.c  multi_udp_server.c  server
nod_test/multicast/: Makefile  client  client.c  server  server.c
nod_test/ssdp_test/: ssdp_path.c
nod_test/tinyalsa/: Makefile
nod_test/tools_py/: cpu_test.py
nod_test/udp/: client  client.c  makefile  server  server.c  server_bak.c
nod_test/wav_unpack/: CMakeLists.txt  wave.cpp
tools/header2bin/: base_main_Rate48_pps_driver.h  dbmdx_UseCases.h  dbmdx_UseCases_Common.h  header2bin.c  untitdd.h  untitled (2).h
tools/is2_wav/: read.md  test.py
tools/read_bin/: read_bin.c
tools/wav_play/: wav_play  wav_play.c
tools/wav_unpack/: CMakeLists.txt  wave.cpp  wave.h
tools/替换每行文件/: tihuan.py
(+2758 files in other folders)
