##############################################################################
# FILE: Makefile
# DESCRIPTION: Compile reboot2fastboot utility
#
# Copyright (c) 2014, Qualcomm Technologies Inc. All rights reserved.
##############################################################################

bin_PROGRAMS = wifireset
wifireset_SOURCES = wifireset.c
